tests/snapshots/formats__bufr__synop3.bufr.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ synop3.bufr — BUFR, edition 3, ECMWF, surface data, land, 2024-03-14 12:30, 2 subset(s), 10 descriptor(s)  [0x0+0x6c]
  ▾ Message 1 — edition 3, ECMWF, surface data, land, 2024-03-14 12:30, 2 subset(s), 10 descriptor(s)  [0x0+0x6c]
    ▾ Section 0: Indicator  [0x0+0x8]
        Magic: "BUFR"  [0x0+0x4]
        Total length: 108  [0x4+0x3]
        Edition: 3  [0x7+0x1]
    ▾ Section 1: Identification — 22 bytes  [0x8+0x16]
        Section length: 22  [0x8+0x3]
        Master table: 0  [0xb+0x1]
        Originating sub-centre: 0  [0xc+0x1]
        Originating centre: ECMWF (0x62)  [0xd+0x1]
        Update sequence number: 0  [0xe+0x1]
        Flags: 0x0 []  [0xf+0x1]
        Data category: surface data, land (0x0)  [0x10+0x1]
        Data sub-category: 2  [0x11+0x1]
        Master table version: 13  [0x12+0x1]
        Local table version: 0  [0x13+0x1]
        Year of century: 24  [0x14+0x1]
        Month: 3  [0x15+0x1]
        Day: 14  [0x16+0x1]
        Hour: 12  [0x17+0x1]
        Minute: 30  [0x18+0x1]
        Local use / padding: 00 00 00 00 00  |.....|  [0x19+0x5]
    ▾ Section 3: Data description — 27 bytes  [0x1e+0x1b]
        Section length: 27  [0x1e+0x3]
        Reserved: 0  [0x21+0x1]
        Number of subsets: 2  [0x22+0x2]
        Flags: 0x80 [observed data]  [0x24+0x1]
      ▾ Descriptors — 10 descriptor(s)  [0x25+0x14]
          3-01-001: "WMO block and station numbers" — 0-01-001 0-01-002  [0x25+0x2]
          3-01-011: "Year, month, day" — 0-04-001 0-04-002 0-04-003  [0x27+0x2]
          3-01-012: "Hour, minute" — 0-04-004 0-04-005  [0x29+0x2]
          0-05-001: "Latitude (high accuracy)" — deg, scale 5, reference -9000000, 25 bits  [0x2b+0x2]
          0-06-001: "Longitude (high accuracy)" — deg, scale 5, reference -18000000, 26 bits  [0x2d+0x2]
          0-07-030: "Height of station ground above mean sea level" — m, scale 1, reference -4000, 17 bits  [0x2f+0x2]
          0-12-101: "Air temperature" — K, scale 2, reference 0, 16 bits  [0x31+0x2]
          0-10-004: "Pressure" — Pa, scale -1, reference 0, 14 bits  [0x33+0x2]
          0-11-001: "Wind direction" — deg, scale 0, reference 0, 9 bits  [0x35+0x2]
          0-11-002: "Wind speed" — m/s, scale 1, reference 0, 12 bits  [0x37+0x2]
    ▾ Section 4: Data — 47 bytes  [0x39+0x2f]
        Section length: 47  [0x39+0x3]
        Reserved: 0  [0x3c+0x1]
      ▾ Subsets — 2 subset(s), 338 of 344 bits used  [0x3d+0x2b]
        ▾ Subset 1 — 14 elements: 6, 610, 2024, 3 …  [0x3d+0x16]
            WMO block number: 6 — 0-01-001  [0x3d+0x1]
            WMO station number: 610 — 0-01-002  [0x3d+0x3]
            Year: 2024 — a, 0-04-001  [0x3f+0x2]
            Month: 3 — mon, 0-04-002  [0x40+0x2]
            Day: 14 — d, 0-04-003  [0x41+0x1]
            Hour: 12 — h, 0-04-004  [0x41+0x2]
            Minute: 30 — min, 0-04-005  [0x42+0x2]
            Latitude (high accuracy): 46.81 — deg, 0-05-001  [0x43+0x4]
            Longitude (high accuracy): 6.94 — deg, 0-06-001  [0x46+0x4]
            Height of station ground above mean sea level: 490 — m, 0-07-030  [0x49+0x3]
            Air temperature: 281.15 — K, 0-12-101  [0x4b+0x3]
            Pressure: 95500 — Pa, 0-10-004  [0x4d+0x3]
            Wind direction: 220 — deg, 0-11-001  [0x4f+0x2]
            Wind speed: 3.6 — m/s, 0-11-002  [0x50+0x3]
        ▾ Subset 2 — 14 elements: 6, 700, 2024, 3 …  [0x52+0x16]
            WMO block number: 6 — 0-01-001  [0x52+0x1]
            WMO station number: 700 — 0-01-002  [0x53+0x2]
            Year: 2024 — a, 0-04-001  [0x54+0x2]
            Month: 3 — mon, 0-04-002  [0x55+0x2]
            Day: 14 — d, 0-04-003  [0x56+0x1]
            Hour: 12 — h, 0-04-004  [0x57+0x1]
            Minute: 30 — min, 0-04-005  [0x57+0x2]
            Latitude (high accuracy): 47.48 — deg, 0-05-001  [0x58+0x4]
            Longitude (high accuracy): 8.54 — deg, 0-06-001  [0x5b+0x4]
            Height of station ground above mean sea level: 426 — m, 0-07-030  [0x5e+0x3]
            Air temperature: 283.35 — K, 0-12-101  [0x60+0x3]
            Pressure: 96210 — Pa, 0-10-004  [0x62+0x3]
            Wind direction: 250 — deg, 0-11-001  [0x64+0x2]
            Wind speed: 5.1 — m/s, 0-11-002  [0x65+0x3]
      Section 5: End: "7777"  [0x68+0x4]
