tests/snapshots/formats__bufr__test.bufr.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ test.bufr — BUFR, edition 4, centre 0, surface data, land, 0000-00-00 00:00, 0 subset(s), 1 descriptor(s)  [0x0+0x33]
  ▾ Message 1 — edition 4, centre 0, surface data, land, 0000-00-00 00:00, 0 subset(s), 1 descriptor(s)  [0x0+0x33]
    ▾ Section 0: Indicator  [0x0+0x8]
        Magic: "BUFR"  [0x0+0x4]
        Total length: 51  [0x4+0x3]
        Edition: 4  [0x7+0x1]
    ▾ Section 1: Identification — 22 bytes  [0x8+0x16]
        Section length: 22  [0x8+0x3]
        Master table: 0  [0xb+0x1]
        Originating centre: 0x0 (unknown)  [0xc+0x2]
        Originating sub-centre: 0  [0xe+0x2]
        Update sequence number: 0  [0x10+0x1]
        Flags: 0x0 []  [0x11+0x1]
        Data category: surface data, land (0x0)  [0x12+0x1]
        International data sub-category: 0  [0x13+0x1]
        Local data sub-category: 0  [0x14+0x1]
        Master table version: 0  [0x15+0x1]
        Local table version: 0  [0x16+0x1]
        Year: 0  [0x17+0x2]
        Month: 0  [0x19+0x1]
        Day: 0  [0x1a+0x1]
        Hour: 0  [0x1b+0x1]
        Minute: 0  [0x1c+0x1]
        Second: 0  [0x1d+0x1]
    ▾ Section 3: Data description — 9 bytes  [0x1e+0x9]
        Section length: 9  [0x1e+0x3]
        Reserved: 0  [0x21+0x1]
        Number of subsets: 0  [0x22+0x2]
        Flags: 0x0 []  [0x24+0x1]
      ▾ Descriptors — 1 descriptor(s)  [0x25+0x2]
          0-00-000: "element"  [0x25+0x2]
    ▾ Section 4: Data — 8 bytes  [0x27+0x8]
        Section length: 8  [0x27+0x3]
        Reserved: 0  [0x2a+0x1]
      ▾ Subsets — 0 subset(s), 0 of 32 bits used  [0x2b+0x4]
      Section 5: End: "7777"  [0x2f+0x4]
